K8S/authorizations-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermanagement
  template:
    metadata:
      labels:
        app: usermanagement
    spec:
      containers:
      - name: usermanagement
        image: coriza333/usermanagement:latest
---
apiVersion: v1
kind: Service
metadata:
  name: authorizations-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: usermanagement
  ports:
  - name: usermanagement
    protocol: TCP
    port: 80
    targetPort: 80
