K8S/shippings-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippings-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
      - name: shipping
        image: coriza333/shipping:latest
---
apiVersion: v1
kind: Service
metadata:
  name: shippings-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: shipping
  ports:
  - name: shipping
    protocol: TCP
    port: 80
    targetPort: 80
