K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: laptop
    http:
      paths:
      - path: /api/katalogs
        pathType: Prefix
        backend:
          service:
            name: katalogs-clusterip-srv
            port: 
              number: 80
      - path: /api/shoppings
        pathType: Prefix
        backend:
          service:
            name: shoppings-clusterip-srv
            port: 
              number: 80
      - path: /api/shippings
        pathType: Prefix
        backend:
          service:
            name: shippings-clusterip-srv
            port: 
              number: 80
      - path: /api/authorizations
        pathType: Prefix
        backend:
          service:
            name: authorizations-clusterip-srv
            port: 
              number: 80
